--- a/_config.yml
+++ b/_config.yml
@@ -16,3 +16,4 @@ rightTopicTitlePre:  '<h3>/* '
 rightTopicTitlePost: '<br />&nbsp;* ------------- */</h3>'
 topicSubtitlePre: '<h4>'
 topicSubtitlePost: '</h4>'
+postImagesPath: '/images/post_images'
