--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,6 @@ topicSubtitlePre: '<h4>'
 topicSubtitlePost: '</h4>'
 url: 'http://dev.tritarget.org'
 postImagesPath: '/images/post_images'
+screenSaver: true
+disqusComments: true
+debug: false
