--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,10 @@ maruku:
 topicTitlePre:  '<h3>/* '
 topicTitlePost: '<br />&nbsp;* ------------------------------------------ */</h3>'
 rightTopicTitlePre:  '<h3>/* '
-rightTopicTitlePost: '<br />&nbsp;* ------------- */</h3>'
+rightTopicTitlePost: '<br />&nbsp;* <span class="headerLine">+++++++++++++</span> */</h3>'
 topicSubtitlePre: '<h4>'
 topicSubtitlePost: '</h4>'
+googleSiteSearch: 'dev.tritarget.org'
 url: 'http://dev.tritarget.org'
 postImagesPath: '/images/post_images'
 screenSaver: true
