--- a/_config.yml
+++ b/_config.yml
@@ -10,16 +10,11 @@ maruku:
   use_divs:   true
   png_dir:    images/latex
   png_url:    /images/latex
-topicTitlePre:  '<h3>/* '
-topicTitlePost: '<br />&nbsp;* ------------------------------------------ */</h3>'
-rightTopicTitlePre:  '<h3>/* '
-rightTopicTitlePost: '<br />&nbsp;* <span class="headerLine">+++++++++++++</span> */</h3>'
-topicSubtitlePre: '<h4>'
-topicSubtitlePost: '</h4>'
 googleSiteSearch: 'dev.tritarget.org'
 url: 'http://dev.tritarget.org'
 postImagesPath: '/images/post_images'
-enableScreenSaver: false
+enableScreenSaver: true
 enableDisqusComments: true
 enableGoogleSearch: true
-debug: true
+enableTwitter: true
+debug: false
