Enables google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ theme: redmond
 # features:
 google:
   analytics:
-    enabled: false
+    enabled: true
     id: "UA-25176709-2"
   search:
     enabled: true
