--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user: weaver.devin@gmail.com
+googleplus_user: 104981501099138892251
 googleplus_hidden: false
 
 # Pinboard
