--- a/_config.yml
+++ b/_config.yml
@@ -118,3 +118,8 @@ gravatar_hash: a33233f156a5531707f130c28565de69
 photos_prefix: "http://photos.tritarget.org/photos/"
 salado_player: "http://photos.tritarget.org/salado/SaladoPlayer-1.3.swf"
 panos_prefix: "http://photos.tritarget.org/panoramas/"
+
+# PGP
+pgp_key_id: "DE767C8A"
+pgp_fingerprint1: "FA9F 1400 8BA5 A847 B097"
+pgp_fingerprint2: "7C06 EBD9 9C92 DE76 7C8A"
