--- a/package.json
+++ b/package.json
@@ -5,15 +5,25 @@
   "description": "A blog of personal quality",
   "author": "Devin Weaver <suki@tritarget.org> (http://tritarget.org/)",
   "license": "CC BY-NC-SA 3.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sukima/dev-tritarget-org"
+  },
   "devDependencies": {
     "browserify": "^5.11.1",
     "coffee-script": "^1.8.0",
     "coffeeify": "^0.7.0",
     "debowerify": "^0.8.1",
+    "event-stream": "^3.1.7",
     "gulp": "^3.8.7",
+    "gulp-concat": "^2.4.0",
+    "gulp-header": "^1.0.5",
+    "gulp-if": "^1.2.4",
     "gulp-rimraf": "^0.1.0",
     "gulp-rsync": "0.0.4",
     "gulp-sass": "^0.7.3",
+    "gulp-streamify": "0.0.5",
+    "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
     "gulpsmith": "^0.4.3",
     "handlebars": "^2.0.0",
@@ -25,6 +35,13 @@
     "metalsmith-permalinks": "^0.4.0",
     "metalsmith-tags": "^0.6.1",
     "metalsmith-templates": "^0.5.2",
-    "node-bourbon": "^1.2.3"
+    "node-bourbon": "^1.2.3",
+    "vinyl-source-stream": "^1.0.0"
+  },
+  "browserify": {
+    "transform": [
+      "coffeeify",
+      "debowerify"
+    ]
   }
 }
