--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-concat": "^2.4.0",
     "gulp-header": "^1.0.5",
     "gulp-if": "^1.2.4",
+    "gulp-livereload": "^2.1.1",
     "gulp-rimraf": "^0.1.0",
     "gulp-rsync": "0.0.4",
     "gulp-sass": "^0.7.3",
