--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "event-stream": "^3.1.7",
     "gulp": "^3.8.7",
     "gulp-concat": "^2.4.0",
+    "gulp-connect": "^2.0.6",
     "gulp-header": "^1.0.5",
     "gulp-if": "^1.2.4",
-    "gulp-livereload": "^2.1.1",
     "gulp-rimraf": "^0.1.0",
     "gulp-rsync": "0.0.4",
     "gulp-sass": "^0.7.3",
