--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-connect": "^2.0.6",
     "gulp-header": "^1.0.5",
     "gulp-if": "^1.2.4",
+    "gulp-less": "^1.3.6",
     "gulp-rimraf": "^0.1.0",
     "gulp-rsync": "0.0.4",
     "gulp-sass": "^0.7.3",
@@ -36,7 +37,6 @@
     "metalsmith-permalinks": "^0.4.0",
     "metalsmith-tags": "^0.6.1",
     "metalsmith-templates": "^0.5.2",
-    "node-bourbon": "^1.2.3",
     "vinyl-source-stream": "^1.0.0"
   },
   "browserify": {
@@ -46,7 +46,7 @@
     ]
   },
   "browser": {
-    "bootstrap": "./bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js",
+    "bootstrap": "./bower_components/bootstrap/dist/js/bootstrap.js",
     "jquery": "./bower_components/jquery/dist/jquery.js"
   },
   "browserify-shim": {
