--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "metalsmith-permalinks": "^0.4.0",
     "metalsmith-tags": "^0.6.1",
     "metalsmith-templates": "^0.5.2",
+    "moment": "^2.5.1",
     "vinyl-source-stream": "^1.0.0"
   },
   "browserify": {
