--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "browserify-shim": "^3.7.0",
     "coffee-script": "^1.8.0",
     "coffeeify": "^0.7.0",
+    "debug": "~0.7.4",
     "event-stream": "^3.1.7",
     "gulp": "^3.8.7",
     "gulp-connect": "^2.0.6",
