--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "metalsmith": "^0.9.0",
     "metalsmith-collections": "^0.6.0",
     "metalsmith-markdown": "^0.2.1",
+    "metalsmith-metallic": "^0.2.0",
     "metalsmith-more": "^0.2.0",
     "metalsmith-mtime": "0.0.2",
     "metalsmith-permalinks": "^0.4.0",
