--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "jquery": "~2.1.1",
     "bootstrap": "~3.2.0",
+    "fontawesome": "~4.2.0",
     "highlightjs": "~8.0.0"
   }
 }
