--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "coffee-script": "^1.8.0",
     "coffeeify": "^0.7.0",
     "debug": "~0.7.4",
+    "diy-handlebars-helpers": "^1.0.10",
     "event-stream": "^3.1.7",
     "gulp": "^3.8.7",
     "gulp-connect": "^2.0.6",
