--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "coffee-script": "^1.8.0",
     "coffeeify": "^0.7.0",
     "debug": "~0.7.4",
+    "del": "^0.1.3",
     "diy-handlebars-helpers": "^1.0.10",
     "event-stream": "^3.1.7",
     "gulp": "^3.8.7",
@@ -22,7 +23,6 @@
     "gulp-header": "^1.0.5",
     "gulp-if": "^1.2.4",
     "gulp-less": "^1.3.6",
-    "gulp-rimraf": "^0.1.0",
     "gulp-rsync": "0.0.4",
     "gulp-sass": "^0.7.3",
     "gulp-streamify": "0.0.5",
