--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulpsmith": "^0.4.3",
     "handlebars": "^2.0.0",
     "lodash": "^2.4.1",
+    "marked": "~0.3.1",
     "metalsmith": "^0.9.0",
     "metalsmith-collections": "^0.6.0",
     "metalsmith-markdown": "^0.2.1",
