--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "marked": "~0.3.1",
     "metalsmith": "^0.9.0",
     "metalsmith-collections": "^0.6.0",
+    "metalsmith-gist": "0.0.1",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-metallic": "^0.2.0",
     "metalsmith-more": "^0.2.0",
