--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "gulp-util": "^3.0.1",
     "gulpsmith": "^0.4.3",
     "handlebars": "^2.0.0",
-    "lodash": "^2.4.1",
     "marked": "~0.3.1",
     "metalsmith": "^0.9.0",
     "metalsmith-collections": "^0.6.0",
@@ -51,7 +50,8 @@
     "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
-    "bad-cipher": "git://github.com/sukima/bad-cipher#1.0.0"
+    "bad-cipher": "git://github.com/sukima/bad-cipher#1.0.0",
+    "lodash": "^2.4.1"
   },
   "browserify": {
     "transform": [
