--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   },
   "browserify-shim": {
     "bootstrap": {
-      "extends": false,
+      "exports": false,
       "depends": [
         "jquery"
       ]
