--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "jquery": "~2.1.1",
+    "backbone": "~1.1.2",
     "bootstrap": "~3.2.0",
     "fontawesome": "~4.2.0",
     "highlightjs": "~8.0.0"
