--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "metalsmith-permalinks": "^0.4.0",
     "metalsmith-tags": "git://github.com/sukima/metalsmith-tags#master",
     "metalsmith-templates": "^0.5.2",
+    "mold-source-map": "^0.3.0",
     "moment": "^2.5.1",
     "vinyl-source-stream": "^1.0.0"
   },
