--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "gulp-if": "^1.2.4",
     "gulp-less": "^1.3.6",
     "gulp-rsync": "0.0.4",
-    "gulp-sass": "^0.7.3",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
@@ -38,7 +37,7 @@
     "marked": "~0.3.1",
     "metalsmith": "^0.9.0",
     "metalsmith-collections": "^0.6.0",
-    "metalsmith-gist": "0.0.1",
+    "metalsmith-gist": "git://github.com/sukima/metalsmith-gist#master",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-metallic": "^0.2.0",
     "metalsmith-more": "^0.2.0",
