--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "backbone": "~1.1.2",
     "bootstrap": "~3.2.0",
     "fontawesome": "~4.2.0",
-    "highlightjs": "~8.0.0"
+    "highlightjs": "~8.0.0",
+    "ekko-lightbox": "~3.1.5"
   }
 }
