--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-header": "^1.0.5",
     "gulp-if": "^1.2.4",
     "gulp-less": "^1.3.6",
+    "gulp-minify-css": "^0.3.10",
     "gulp-rsync": "0.0.4",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.0.1",
