--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gulp clean"
   },
   "devDependencies": {
+    "bower": "^1.3.12",
     "browserify": "^5.11.1",
     "browserify-shim": "^3.7.0",
     "coffee-script": "^1.8.0",
