--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "marked": "~0.3.1",
     "metalsmith": "^0.9.0",
     "metalsmith-collections": "^0.6.0",
-    "metalsmith-gist": "git://github.com/sukima/metalsmith-gist#master",
+    "metalsmith-lunr": "git://github.com/sukima/metalsmith-lunr",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-metallic": "^0.2.0",
     "metalsmith-more": "^0.2.0",
@@ -52,7 +52,9 @@
   },
   "dependencies": {
     "bad-cipher": "git://github.com/sukima/bad-cipher#1.0.0",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "lunr": "^0.5.6",
+    "lz-string": "^1.3.3"
   },
   "browserify": {
     "transform": [
